# PetGPT

./: .gitignore  CLAUDE.md  ELECTRON-DOCKER-INTEGRATION.md  README.md  SEND_MESSAGE_FEEDBACK.md  dev-windows.ps1  docker-compose.yml  index.html  package-lock.json  package.json  readme.md  start-electron-docker.cmd  tailwind.config.js  vite.config.js
.cargo/: config.toml
.github/: CODEOWNERS
backend/: .env.example  .gitignore  Dockerfile  package-lock.json  package.json
backend/src/: index.js
backend/src/LLMs/: ChatGPTService.js  GeminiService.js  llm.js
backend/src/data/: conversations.json  pets.json
backend/src/models/: Conversation.js  Pet.js
backend/src/routes/: ai.js  conversations.js  pets.js
backend/src/utils/: jsonStorage.js
design/icons/: README.md
docs/superpowers/plans/: 2026-04-03-cc-subagent.md  (+5 more)
electron/: Preload.js  ipcMainHandler.js  main.js  package.json  test.js
electron/assets/: icon.icns
electron/mcp/: client.js  index.js  ipcHandlers.js  serverManager.js
electron/models/: assistant.js  conversation.js  image_processor.js  mcp_config.js  model_config.js  pet.js  pet_memory.js  settings.js
frontend/: Dockerfile  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src-tauri/: tauri.conf.json
memory module documents/: soul-definition.md  user-definition.md
new module documents/: MCP-SERVER-SPEC.md  README.md  file-operations.md  memory-definition.md  requirements.md  system-prompt-injection.md
scripts/: build-windows.ps1  create-deb.sh  create-dmg-intel.sh  create-dmg.sh  dmg-readme.rtf  export_intent_training.mjs  generate-all-icons.sh
scripts/__tests__/: export_intent_training.test.mjs
src/: index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml  msvc_link.bat  rustc-wrapper.bat
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  linux_shortcuts.rs  main.rs  message_cache.rs  tab_state.rs  window_layout.rs
src-tauri/src/commands/: training_export.rs
src-tauri/src/database/: api_providers.rs  chat_history.rs  conversations.rs  mcp_servers.rs  mod.rs  pets.rs  settings.rs  skins.rs
src-tauri/src/llm/: client.rs  mod.rs  proxy.rs  stream.rs  types.rs
src-tauri/src/mcp/: client.rs  http_client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/platform/: bmp.rs  fallback.rs  linux.rs  macos.rs  mod.rs  types.rs
src-tauri/src/subagent/: mod.rs
src-tauri/src/workspace/: engine.rs  mod.rs
src/components/: App.jsx  ChatboxBody.jsx  ChatboxMessageArea.jsx  ErrorBoundary.jsx  index.js
src/context/: initialState.jsx  reducer.jsx
src/pages/: AddAssistantPage.jsx  AddMcpServerPage.jsx  AddModelPage.jsx  CharacterPage.jsx  EditAssistantPage.jsx  EditMcpServerPage.jsx  EditModelPage.jsx  ManagementPage.jsx  McpPage.jsx  ScreenshotOverlay.jsx  SelectCharacterPage.jsx  SettingsPage.jsx  SocialPage.jsx
src/utils/: bridge.js  gemini.js  intentTraining.js  moodDetector.js  openai.js  promptBuilder.js  promptCache.js  socialAgent.js  socialPromptBuilder.js  subagentManager.js  tauri.js  timeInjection.js  toolDocs.js  useSettings.js
(+119 files in other folders)
