[package]
name = "petgpt"
version = "0.4.2"
description = "PetGPT - AI Desktop Pet Assistant"
authors = ["JulesLiu390"]
license = "MIT"
repository = "https://github.com/JulesLiu390/PetGPT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.9.5", features = ["protocol-asset", "macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2.0", features = ["serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for MCP HTTP transport
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"

# Utilities
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
thiserror = "1.0"
base64 = "0.22"
image = "0.25"
url = "2.5"

# Window effects
window-vibrancy = "0.5"

# macOS specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# Linux specific
[target.'cfg(target_os = "linux")'.dependencies]
image = "0.25"
libc = "0.2"

[profile.dev]
opt-level = 0
debug = false
incremental = true

[profile.dev.package."windows-sys"]
codegen-units = 1

[profile.dev.package."windows-core"]
codegen-units = 1
